Add basic operations
