# src/main/resources/api.yaml
@@ -11,8 +11,8 @@ paths:
     post:
       summary: Log temperatre and humidity data
       operationId: logData
-      security:
-        - api_key: []
+#      security:
+#        - api_key: []
       tags:
         - update
       parameters:
@@ -44,8 +44,8 @@ paths:
     get:
       summary: List dataPoints for a specified period
       operationId: listDataPoints
-      security:
-        - api_key: []
+#      security:
+#        - api_key: []
       tags:
         - dataPoints
       parameters:
@@ -91,8 +91,8 @@ paths:
     get:
       summary: List dataPoints for a specified time range
       operationId: dataPointsRange
-      security:
-        - api_key: []
+#      security:
+#        - api_key: []
       tags:
         - dataPointsRange
       parameters:
@@ -132,8 +132,8 @@ paths:
     get:
       summary: List sensors that log data
       operationId: listSensors
-      security:
-        - api_key: []
+#      security:
+#        - api_key: []
       tags:
         - sensors
       responses:
@@ -200,8 +200,8 @@ components:
           format: int32
         message:
           type: string
-  securitySchemes:
-    api_key:
-      type: apiKey
-      name: api_key
-      in: header   # or query
+#  securitySchemes:
+#    api_key:
+#      type: apiKey
+#      name: api_key
+#      in: header   # or query
